syntax = "proto3";
package virtengine.provider.v1beta4;

import "gogoproto/gogo.proto";

import "cosmos_proto/cosmos.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/provider/v1beta4";

// EventProviderCreated defines an SDK message for provider created event.
// It contains all the required information to identify a provider on-chain.
message EventProviderCreated {
  option (gogoproto.equal) = true;
  // Owner is the bech32 address of the account of the provider.
  // It is a string representing a valid account address.
  //
  // Example:
  //   "ve1..."
  string owner = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag)   = "owner",
    (gogoproto.moretags)  = "yaml:\"owner\""
  ];
}

// EventProviderUpdated defines an SDK message for provider updated event.
// It contains all the required information to identify a provider on-chain.
message EventProviderUpdated {
  option (gogoproto.equal) = true;
  // Owner is the bech32 address of the account of the provider.
  // It is a string representing a valid account address.
  //
  // Example:
  //   "ve1..."
  string owner = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag)   = "owner",
    (gogoproto.moretags)  = "yaml:\"owner\""
  ];
}

// EventProviderDeleted defines an SDK message for provider deleted event.
message EventProviderDeleted {
  option (gogoproto.equal) = true;
  // Owner is the bech32 address of the account of the provider.
  // It is a string representing a valid account address.
  //
  // Example:
  //   "ve1..."
  string owner = 1 [
      (cosmos_proto.scalar) = "cosmos.AddressString",
      (gogoproto.jsontag)   = "owner",
      (gogoproto.moretags)  = "yaml:\"owner\""
  ];
}

// EventProviderDomainVerificationStarted defines an SDK message for when domain verification begins
message EventProviderDomainVerificationStarted {
  option (gogoproto.equal) = true;
  string owner = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag)   = "owner",
    (gogoproto.moretags)  = "yaml:\"owner\""
  ];
  string domain = 2 [
    (gogoproto.jsontag)  = "domain",
    (gogoproto.moretags) = "yaml:\"domain\""
  ];
  string token = 3 [
    (gogoproto.jsontag)  = "token",
    (gogoproto.moretags) = "yaml:\"token\""
  ];
}

// EventProviderDomainVerified defines an SDK message for provider domain verified event
message EventProviderDomainVerified {
  option (gogoproto.equal) = true;
  string owner = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag)   = "owner",
    (gogoproto.moretags)  = "yaml:\"owner\""
  ];
  string domain = 2 [
    (gogoproto.jsontag)  = "domain",
    (gogoproto.moretags) = "yaml:\"domain\""
  ];
}
