syntax = "proto3";
package virtengine.provider.v1beta4;

import "gogoproto/gogo.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";

import "virtengine/base/attributes/v1/attribute.proto";

import "virtengine/provider/v1beta4/provider.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/provider/v1beta4";

// MsgCreateProvider defines an SDK message for creating a provider.
message MsgCreateProvider {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "owner";

  // Owner is the bech32 address of the account of the provider.
  // It is a string representing a valid account address.
  //
  // Example:
  //   "ve1..."
  string owner = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag)   = "owner",
    (gogoproto.moretags)  = "yaml:\"owner\""
  ];
  // HostURI is the Uniform Resource Identifier for provider connection.
  // This URI is used to directly connect to the provider to perform tasks such as sending the manifest.
  string host_uri = 2 [
    (gogoproto.customname) = "HostURI",
    (gogoproto.jsontag)    = "host_uri",
    (gogoproto.moretags)   = "yaml:\"host_uri\""
  ];

  // Attributes is a list of arbitrary attribute key-value pairs.
  repeated virtengine.base.attributes.v1.Attribute attributes = 3 [
    (gogoproto.castrepeated) = "github.com/virtengine/virtengine/sdk/go/node/types/attributes/v1.Attributes",
    (gogoproto.nullable)     = false,
    (gogoproto.jsontag)      = "attributes",
    (gogoproto.moretags)     = "yaml:\"attributes\""
  ];

  // Info contains additional provider information.
  virtengine.provider.v1beta4.Info info = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "info",
    (gogoproto.moretags) = "yaml:\"info\""
  ];
}

// MsgCreateProviderResponse defines the Msg/CreateProvider response type.
message MsgCreateProviderResponse {}

// MsgUpdateProvider defines an SDK message for updating a provider
message MsgUpdateProvider {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "owner";

  string owner    = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag)   = "owner",
    (gogoproto.moretags)  = "yaml:\"owner\""
  ];
  string host_uri = 2 [
    (gogoproto.customname) = "HostURI",
    (gogoproto.jsontag)    = "host_uri",
    (gogoproto.moretags)   = "yaml:\"host_uri\""
  ];
  repeated virtengine.base.attributes.v1.Attribute attributes = 3 [
    (gogoproto.castrepeated) = "github.com/virtengine/virtengine/sdk/go/node/types/attributes/v1.Attributes",
    (gogoproto.nullable)     = false,
    (gogoproto.jsontag)      = "attributes",
    (gogoproto.moretags)     = "yaml:\"attributes\""
  ];
  virtengine.provider.v1beta4.Info info = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "info",
    (gogoproto.moretags) = "yaml:\"info\""
  ];
}

// MsgUpdateProviderResponse defines the Msg/UpdateProvider response type.
message MsgUpdateProviderResponse {}

// MsgDeleteProvider defines an SDK message for deleting a provider
message MsgDeleteProvider {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "owner";

  string owner = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag)   = "owner",
    (gogoproto.moretags)  = "yaml:\"owner\""
  ];
}

// MsgDeleteProviderResponse defines the Msg/DeleteProvider response type.
message MsgDeleteProviderResponse {}

// MsgGenerateDomainVerificationToken defines an SDK message for generating a domain verification token
message MsgGenerateDomainVerificationToken {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "owner";

  string owner = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag)   = "owner",
    (gogoproto.moretags)  = "yaml:\"owner\""
  ];
  string domain = 2 [
    (gogoproto.jsontag)  = "domain",
    (gogoproto.moretags) = "yaml:\"domain\""
  ];
}

// MsgGenerateDomainVerificationTokenResponse defines the Msg/GenerateDomainVerificationToken response type.
message MsgGenerateDomainVerificationTokenResponse {
  string token = 1 [
    (gogoproto.jsontag)  = "token",
    (gogoproto.moretags) = "yaml:\"token\""
  ];
  int64 expires_at = 2 [
    (gogoproto.jsontag)  = "expires_at",
    (gogoproto.moretags) = "yaml:\"expires_at\""
  ];
}

// MsgVerifyProviderDomain defines an SDK message for verifying a provider's domain
message MsgVerifyProviderDomain {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "owner";

  string owner = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag)   = "owner",
    (gogoproto.moretags)  = "yaml:\"owner\""
  ];
}

// MsgVerifyProviderDomainResponse defines the Msg/VerifyProviderDomain response type.
message MsgVerifyProviderDomainResponse {
  bool verified = 1 [
    (gogoproto.jsontag)  = "verified",
    (gogoproto.moretags) = "yaml:\"verified\""
  ];
}

// VerificationMethod defines the method used for domain verification
enum VerificationMethod {
  VERIFICATION_METHOD_UNKNOWN = 0;
  VERIFICATION_METHOD_DNS_TXT = 1;
  VERIFICATION_METHOD_DNS_CNAME = 2;
  VERIFICATION_METHOD_HTTP_WELL_KNOWN = 3;
}

// MsgRequestDomainVerification defines an SDK message for requesting domain verification
message MsgRequestDomainVerification {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "owner";

  string owner = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag)   = "owner",
    (gogoproto.moretags)  = "yaml:\"owner\""
  ];
  string domain = 2 [
    (gogoproto.jsontag)  = "domain",
    (gogoproto.moretags) = "yaml:\"domain\""
  ];
  VerificationMethod method = 3 [
    (gogoproto.jsontag)  = "method",
    (gogoproto.moretags) = "yaml:\"method\""
  ];
}

// MsgRequestDomainVerificationResponse defines the Msg/RequestDomainVerification response type.
message MsgRequestDomainVerificationResponse {
  string token = 1 [
    (gogoproto.jsontag)  = "token",
    (gogoproto.moretags) = "yaml:\"token\""
  ];
  int64 expires_at = 2 [
    (gogoproto.jsontag)  = "expires_at",
    (gogoproto.moretags) = "yaml:\"expires_at\""
  ];
  string verification_target = 3 [
    (gogoproto.jsontag)  = "verification_target",
    (gogoproto.moretags) = "yaml:\"verification_target\""
  ];
}

// MsgConfirmDomainVerification defines an SDK message for confirming domain verification with off-chain proof
message MsgConfirmDomainVerification {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "owner";

  string owner = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag)   = "owner",
    (gogoproto.moretags)  = "yaml:\"owner\""
  ];
  string proof = 2 [
    (gogoproto.jsontag)  = "proof",
    (gogoproto.moretags) = "yaml:\"proof\""
  ];
}

// MsgConfirmDomainVerificationResponse defines the Msg/ConfirmDomainVerification response type.
message MsgConfirmDomainVerificationResponse {
  bool verified = 1 [
    (gogoproto.jsontag)  = "verified",
    (gogoproto.moretags) = "yaml:\"verified\""
  ];
  int64 verified_at = 2 [
    (gogoproto.jsontag)  = "verified_at",
    (gogoproto.moretags) = "yaml:\"verified_at\""
  ];
}

// MsgRevokeDomainVerification defines an SDK message for revoking domain verification
message MsgRevokeDomainVerification {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "owner";

  string owner = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag)   = "owner",
    (gogoproto.moretags)  = "yaml:\"owner\""
  ];
}

// MsgRevokeDomainVerificationResponse defines the Msg/RevokeDomainVerification response type.
message MsgRevokeDomainVerificationResponse {}
