syntax = "proto3";
package virtengine.provider.v1beta4;

import "cosmos/msg/v1/msg.proto";

import "virtengine/provider/v1beta4/msg.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/provider/v1beta4";

// Msg defines the provider Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // CreateProvider defines a method that creates a provider given the proper inputs.
  rpc CreateProvider(MsgCreateProvider) returns (MsgCreateProviderResponse);

  // UpdateProvider defines a method that updates a provider given the proper inputs.
  rpc UpdateProvider(MsgUpdateProvider) returns (MsgUpdateProviderResponse);

  // DeleteProvider defines a method that deletes a provider given the proper inputs.
  rpc DeleteProvider(MsgDeleteProvider) returns (MsgDeleteProviderResponse);

  // GenerateDomainVerificationToken generates a verification token for a provider's domain.
  rpc GenerateDomainVerificationToken(MsgGenerateDomainVerificationToken) returns (MsgGenerateDomainVerificationTokenResponse);

  // VerifyProviderDomain verifies a provider's domain via DNS TXT record.
  rpc VerifyProviderDomain(MsgVerifyProviderDomain) returns (MsgVerifyProviderDomainResponse);

  // RequestDomainVerification requests domain verification with specified method.
  rpc RequestDomainVerification(MsgRequestDomainVerification) returns (MsgRequestDomainVerificationResponse);

  // ConfirmDomainVerification confirms domain verification with off-chain proof.
  rpc ConfirmDomainVerification(MsgConfirmDomainVerification) returns (MsgConfirmDomainVerificationResponse);

  // RevokeDomainVerification revokes a provider's domain verification.
  rpc RevokeDomainVerification(MsgRevokeDomainVerification) returns (MsgRevokeDomainVerificationResponse);
}
